Swagger Addition
Signed-off-by: Ravi Gupta